# MXKJ_Detection

./: CMakeLists.txt  README.md  ccamera.cpp  ccamera.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
